test/errors/assign_to_const.correct
error: assign_to_const.li:4:1: cannot assign to constant variable 'y'
│ y = 20;
│ ~~~~~~
│ ^
